kustomize/igpu-stack/unmanic-series/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: unmanic-series
  labels:
    app: unmanic-series
  annotations:
    reloader.stakater.com/auto: "true"    
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: unmanic-series
  template:
    metadata:
      labels:
        app: unmanic-series
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - joel
      containers:
      - name: unmanic-series
        image: registry.vinicima.com/unmanic:latest
        imagePullPolicy: Always
        ports:
        - name: unmanic-series
          containerPort: 8888
        resources:
          limits:
            gpu.intel.com/i915: "5"
        volumeMounts:
        - name: unmanic-series
          mountPath: /config
        - name: nfs-series
          mountPath: /data/videos/series
        - name: unmanic-series-transcode
          mountPath: /tmp/unmanic
      volumes:
      - name: unmanic-series
        persistentVolumeClaim:
          claimName: unmanic-series
      - name: nfs-series
        nfs:
          server: 192.168.253.250
          path: /export/data/videos/series
      - name: unmanic-series-transcode
        emptyDir:
          medium: Memory
          sizeLimit: 32Gi
