kustomize/igpu-stack/unmanic-series/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unmanic-series
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unmanic-series-k8s.vinicima.com`) || Host(`unmanic-series.vinicima.com`)
      kind: Rule
      services:
        - name: unmanic-series
          port: 8888
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima.com-tls
